Fix dark mode flickering, start changing 'skills' section to use badges with color-coding based on category

--- a/src/base.css
+++ b/src/base.css
@@ -63,9 +63,4 @@
   body {
     @apply bg-background text-foreground;
   }
-  @media (prefers-color-scheme: dark) {
-    body {
-      @apply dark;
-    }
-  }
 }
